feature(validator): validator port to spark #1257